<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fgr.udacity0.MainActivity"
    >

  <TextView
      android:id="@+id/lbl_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/lbl_title"
      android:textSize="22sp"
      />

  <Button
      android:id="@+id/btn_popular_movies"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/lbl_title"
      android:layout_alignLeft="@+id/lbl_title"
      android:layout_alignRight="@+id/lbl_title"
      android:layout_alignStart="@+id/lbl_title"
      android:layout_below="@+id/lbl_title"
      android:layout_marginTop="8dp"
      android:text="@string/btn_popular_movies"
      />

  <Button
      android:id="@+id/btn_stock_hawk"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/lbl_title"
      android:layout_alignLeft="@+id/lbl_title"
      android:layout_alignRight="@+id/lbl_title"
      android:layout_alignStart="@+id/lbl_title"
      android:layout_below="@+id/btn_popular_movies"
      android:layout_marginTop="8dp"
      android:text="@string/btn_stock_hawk"
      />

  <Button
      android:id="@+id/btn_build_it_bigger"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/lbl_title"
      android:layout_alignLeft="@+id/lbl_title"
      android:layout_alignRight="@+id/lbl_title"
      android:layout_alignStart="@+id/lbl_title"
      android:layout_below="@+id/btn_stock_hawk"
      android:layout_marginTop="8dp"
      android:text="@string/btn_build_it_bigger"
      />

  <Button
      android:id="@+id/btn_make_your_app_material"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/lbl_title"
      android:layout_alignLeft="@+id/lbl_title"
      android:layout_alignRight="@+id/lbl_title"
      android:layout_alignStart="@+id/lbl_title"
      android:layout_below="@+id/btn_build_it_bigger"
      android:layout_marginTop="8dp"
      android:text="@string/btn_make_your_app_material"
      />

  <Button
      android:id="@+id/btn_go_ubiquitous"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/lbl_title"
      android:layout_alignLeft="@+id/lbl_title"
      android:layout_alignRight="@+id/lbl_title"
      android:layout_alignStart="@+id/lbl_title"
      android:layout_below="@+id/btn_make_your_app_material"
      android:layout_marginTop="8dp"
      android:text="@string/btn_go_ubiquitous"
      />

  <Button
      android:id="@+id/btn_capstone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/lbl_title"
      android:layout_alignLeft="@+id/lbl_title"
      android:layout_alignRight="@+id/lbl_title"
      android:layout_alignStart="@+id/lbl_title"
      android:layout_below="@+id/btn_go_ubiquitous"
      android:layout_marginTop="8dp"
      android:text="@string/btn_capstone"
      />

</RelativeLayout>